--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2024.12.14
+charset-normalizer==3.4.1
 cheroot==10.0.1
+idna==3.10
 jaraco.functools==4.1.0
 more-itertools==10.6.0
+requests==2.32.3
+urllib3==2.3.0
 web.py==0.62
